[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Grabbable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/nodule.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1073.57, -53.5237, 0, 0, 0, 0, 1089.11, 555.133, 0, 0, 0, 0, 1082.61, 624.286, 0, 0, 0, 0, -175.396, 645.323, 0, 0, 0, 0, -158.81, -68.7836, 0, 0, 0, 0, 1027.53, -39.3719 )
}

[node name="Game" type="Node" groups=["Game"]]
script = ExtResource( 1 )
levelScene = ExtResource( 4 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 542, 287 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -10571, -7603.36 )
scale = Vector2( 23.6663, 29.3332 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -164.383, 171.154 )
rotation = -1.54757
offset = 2404.43

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="Nodule" type="Sprite" parent="."]
position = Vector2( -1.52588e-05, 3.99998 )
scale = Vector2( 0.273684, 0.289474 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 538, 286 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Grabbable" parent="." instance=ExtResource( 2 )]
position = Vector2( 433, 204 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
